test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-nil.good
init-var-nonnil-unmanaged-from-oknil-nil.chpl:9: error: cannot assign to unmanaged MyClass from nil
